--- a/index.html
+++ b/index.html
@@ -5,157 +5,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Himanshu Fitness GYM</title>
+    <title>Personal Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="utils.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
-<body class="overflow-x-hidden">
-    <div class="container mx-auto">
-        <header>
-            <nav class="flex justify-between">
-                <div class="logo font-bold flex item-center text-blue">Himanshu Fitness GYM</div>
-                <ul class="navbar flex item-center">
-                    <li>Home</li>
-                    <li>Services</li>
-                    <li>Contact Us</li>
-                    <li>About</li>
-                    <li><button class="btn">Join Now</button></li>
-                </ul>
-            </nav>
-            <hr>
-        </header>
-        <main class="min-h-screen">
-            <section class="section1">
-                <div class="flex">
-                    <div class="topleft flex flex-col justify-center px-2">
-                        <div class="text-center">
-                            <img class="dumbelling"
-                                src="https://t3.ftcdn.net/jpg/00/93/55/88/240_F_93558844_zsJSg3nGtgXX0HSToxWJeBjEt1OIyTHo.jpg"
-                                alt="">
-                        </div>
-                        <h1 class="my-1 text-center">The Best Fittness GYM In Indore Is Here</h1>
-                        <p class="text-center">Welcome to Himanshu Gym & Fitness, where we believe that a healthy body
-                            is the foundation for a happy life. We are committed to helping you achieve your fitness
-                            goals and maintain a healthy lifestyle through our range of services and programs.</p>
-                    </div>
-                    <div class="topright flex justify-center">
-                        <img class="gyming"
-                            src="https://t4.ftcdn.net/jpg/01/74/21/07/240_F_174210783_HwdXL6bvRj1114CqPeR5YES08CLT524C.jpg"
-                            alt="">
-                    </div>
-                </div>
-            </section>
-            <hr>
-            <section class="section2">
-                <h1 class="text-center my-2">Pricing</h1>
-                <p class="">At Himanshu Gym & Fitness, we believe that fitness should be accessible to everyone, which
-                    is why we offer a range of pricing options to suit every budget and fitness goal.</p>
-                <div class="boxes-flex">
-                    <div class="box flex justify-center">
-                        <h2>Free</h2>
-                        <ul>
-                            <li>$0</li>
-                            <li>1 users access</li>
-                            <li>2GB of storage</li>
-                            <li>Email support</li>
-                            <li>Help center support</li>
-                            <li><button class="btn">Signup Now</button></li>
-                        </ul>
-                    </div>
-                    <div class="box flex justify-center">
-                        <h2>Pro</h2>
-                        <ul>
-                            <li class="highlighted">$10/month</li>
-                            <li>2 users access</li>
-                            <li>50GB of storage</li>
-                            <li>Email Support</li>
-                            <li>Help Center Support</li>
-                            <li><button class="btn">Signup Now</button></li>
-                        </ul>
-                    </div>
-                    <div class="box flex justify-center">
-                        <h2>Ultra Pro</h2>
-                        <ul>
-                            <li class="highlighted">$25/month</li>
-                            <li>10 users access</li>
-                            <li>2TB of storage</li>
-                            <li>Email Support</li>
-                            <li>Help Center Support</li>
-                            <li><button class="btn">Signup Now</button></li>
-                        </ul>
-                    </div>
-                </div>
-            </section>
-            <hr>
-            <section3 class="section3">
-                <h2 class="text-center my-2">Comparision Plans</h2>
-                <div class="container plantable">
-                    <table class="table text-center">
-                        <thead>
-                            <tr>
-                                <th>-</th>
-                                <th>Free</th>
-                                <th>Pro</th>
-                                <th>Ultra Pro</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <th scope="row" class="text-start">Public</th>
-                                <td>Yes
-                                    </svg></td>
-                                <td>Yes
-                                    </svg></td>
-                                <td>Yes
-                                    </svg></td>
-                            </tr>
-                            <tr>
-                                <th scope="row" class="text-start">Private</th>
-                                <td>-</td>
-                                <td>Yes
-                                    </svg></td>
-                                <td> Yes
-                                    </svg></td>
-                            </tr>
-                        </tbody>
-                        <tbody>
-                            <tr>
-                                <th scope="row" class="text-start">Permission</th>
-                                <td>Yes</svg></td>
-                                <td>Yes</svg></td>
-                                <td>Yes</svg></td>
-                            </tr>
-                            <tr>
-                                <th scope="row" class="text-start">Sharing</th>
-                                <td>-</td>
-                                <td>Yes</svg></td>
-                                <td>Yes</svg></td>
-                            </tr>
-                            <tr>
-                                <th scope="row" class="text-start">Unlimited Members</th>
-                                <td>-</td>
-                                <td>Yes</Yes>
-                                </td>
-                                <td>Yes</Yes>
-                                </td>
-                            </tr>
-                            <tr>
-                                <th scope="row" class="text-start">Extra Security</th>
-                                <td>-</td>
-                                <td>-</td>
-                                <td>Yes</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                </section>
-                <hr>
-        </main>
-        <footer>
-            Copyright &copy;HimanshuFitnessGYM.com | All rights reserved
-        </footer>
-    </div>
+<body>
+    <header class="header">
+        <a href="#" class="logo">Himanshu.</a>
+        <nav class="navbar">
+            <a href="#" class="active">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Contact</a>
+        </nav>
+    </header>
+    <section class="home">
+        <div class="home-content">
+            <h1>Hi,I'm Himanshu Srivastav</h1>
+            <h3>Frontend Developer</h3>
+            <p>Hi, I'm Himanshu Srivastav, a frontend developer with a passion for crafting beautiful and intuitive user
+                interfaces. I specialize in building responsive websites and web applications that deliver exceptional
+                user experiences across all devices and platforms.
+
+                I have a keen eye for detail and a deep understanding of web development technologies, including HTML,
+                CSS, JavaScript, and various frontend frameworks such as React and Vue.js. With years of experience in
+                the industry, I have honed my skills in creating visually stunning designs and intuitive user interfaces
+                that engage and delight users.
+
+                My portfolio showcases some of my recent projects, which demonstrate my expertise in designing and
+                developing dynamic and responsive web applications that meet the needs of businesses and users alike.
+                From e-commerce websites to social media platforms, I have worked on a diverse range of projects, each
+                with its unique challenges and opportunities.
+
+                Whether you are looking to build a new website, redesign an existing one, or develop a custom web
+                application, I have the skills and expertise to bring your vision to life. So, take a look at my
+                portfolio, and let's work together to create something amazing!</p>
+            <div class="btn-box"></div>
+            <a href="#">Hire Me</a>
+            <a href="#">Let's Talk</a>
+        </div>
+        <div class="home-sci">
+            <a href="https://www.facebook.com/profile.php?id=100052852154828&sk=map"><i class='bx bxl-facebook'></i></a>
+            <a href="https://www.linkedin.com/in/himanshusrivastav-925484236"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://instagram.com/himanshusriwastava111?igshid=ZDdkNTZiNTM"><i
+                    class='bx bxl-instagram'></i></a>
+        </div>
+        <span class="home-imgHover"></span>
+    </section>
 </body>
 
 </html>
