--- a/index.html
+++ b/index.html
@@ -5,55 +5,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Temperature Converator</title>
     <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
-    <header class="header">
-        <a href="#" class="logo">Himanshu.</a>
-        <nav class="navbar">
-            <a href="#" class="active">Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Contact</a>
-        </nav>
-    </header>
-    <section class="home">
-        <div class="home-content">
-            <h1>Hi,I'm Himanshu Srivastav</h1>
-            <h3>Frontend Developer</h3>
-            <p>Hi, I'm Himanshu Srivastav, a frontend developer with a passion for crafting beautiful and intuitive user
-                interfaces. I specialize in building responsive websites and web applications that deliver exceptional
-                user experiences across all devices and platforms.
-
-                I have a keen eye for detail and a deep understanding of web development technologies, including HTML,
-                CSS, JavaScript, and various frontend frameworks such as React and Vue.js. With years of experience in
-                the industry, I have honed my skills in creating visually stunning designs and intuitive user interfaces
-                that engage and delight users.
-
-                My portfolio showcases some of my recent projects, which demonstrate my expertise in designing and
-                developing dynamic and responsive web applications that meet the needs of businesses and users alike.
-                From e-commerce websites to social media platforms, I have worked on a diverse range of projects, each
-                with its unique challenges and opportunities.
-
-                Whether you are looking to build a new website, redesign an existing one, or develop a custom web
-                application, I have the skills and expertise to bring your vision to life. So, take a look at my
-                portfolio, and let's work together to create something amazing!</p>
-            <div class="btn-box"></div>
-            <a href="#">Hire Me</a>
-            <a href="#">Let's Talk</a>
+    <div class="container">
+        <div class="title">
+            <h1>Temperature Converator</h1>
+            <span class="Temperature-icon"><i class="fa-solid fa-temperature-list"></i></span>
         </div>
-        <div class="home-sci">
-            <a href="https://www.facebook.com/profile.php?id=100052852154828&sk=map"><i class='bx bxl-facebook'></i></a>
-            <a href="https://www.linkedin.com/in/himanshusrivastav-925484236"><i class='bx bxl-linkedin'></i></a>
-            <a href="https://instagram.com/himanshusriwastava111?igshid=ZDdkNTZiNTM"><i
-                    class='bx bxl-instagram'></i></a>
+        <div id="celsius">
+            <input type="number" name="" placeholder="Celsius">
+            <span class="icon">&#8451</span>
         </div>
-        <span class="home-imgHover"></span>
-    </section>
+        <div id="fahrenheit">
+            <input type="number" name="" placeholder="Fahrenheit">
+            <span class="icon">&#8457</span>
+        </div>
+        <div id="kelvin">
+            <input type="number" name="" placeholder="Kelvin">
+            <span class="icon">&#8490</span>
+        </div>
+        <div class="button">
+            <button>All Clear</button>
+        </div>
+    </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
